--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ nav ul {
   width: 100%;
   background-color: rgba(0, 0, 0, .2);
   position: absolute;
+  margin: 0;
   z-index: 1;
 }
 
@@ -47,74 +48,79 @@ nav ul {
   letter-spacing: 2px;
   font-weight: 600;
   padding: 25px;
-  transition: all ease 0.5s;
+  transition-property: background-color;
+  transition: all ease 1s;
 }
 
 .header ul li a:hover {
   background-color: rgba(0, 204, 255, 0.473);
 }
 
-.na-logo {
-  width: 20%;
-  height: auto;
+body {
+  font-size: 34px;
+  font-size: clamp(16px, 4vw, 38px);
+  margin: 0;
+  color: whitesmoke;
 }
 
-.container {
+main {
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+dl {
+  padding: 3em;
+  max-width: 120vh;
+  margin: 1em;
+  background-color: rgba(0, 204, 255, 0.459);
+  border-radius: 5em;  
+}
+
+dt {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+
+dd {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.button {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 1em;
+  margin-bottom: 0.5em;
+  text-align: center;
+  background-color: rgba(255, 0, 0, 0.801);
+  border-radius: 3.5rem;
+  padding: 1.5rem;
+  color: whitesmoke;
+  border-style: none;
+  transition-property: background-color;
+  transition: all ease 1s;
+}
+
+.button:hover {
+  transform: translateY(-2px);
+  box-shadow: .5rem .5rem 2rem rgba(0, 0, 0, .2);
+  background-color: rgba(47, 0, 255, 0.801);
 
 }
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@300&display=swap');
 
-    body {
-      font-size: 34px;
-      font-size: clamp(20px, 5vw, 48px);
-      margin: 0;
-      color: whitesmoke;
-      /* overflow: hidden; Hide scrollbars */
-    }
-
-    main {
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-    }
-
-    dl {
-      padding: 3em;
-      max-width: 120vh;
-      margin: 1em;
-      background-color: rgba(0, 204, 255, 0.459);
-      border-radius: 5em;  
-    }
-
-    dt {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 600;
-      font-size: 1.5em;
-      margin-bottom: 0.5em;
-      text-align: center;
-    }
-
-    dd {
-      font-family: 'Open Sans', sans-serif;
-      font-weight: 300;
-      font-style: italic;
-      text-align: center;
-    }
-
-    button {
-      font-family: 'Raleway', sans-serif;
-      font-weight: 300;
-      font-size: 1em;
-      margin-bottom: 0.5em;
-      text-align: center;
-      margin-top: 6rem;
-      background-color: rgba(255, 0, 0, 0.863);
-      border-radius: 3.5rem;
-      padding: 1.5rem;
-      color: whitesmoke;
-      border-style: none;
-    }
+.button:active {
+  transform: translateY(0);
+  box-shadow: none;
+}
 
 /* Media Queries */
 
@@ -129,11 +135,6 @@ nav ul {
 input[type=checkbox] {
   display: none;
 }
-
-/* main {
-  position: absolute;
-  bottom: 0;
-} */
 
 .header {
   background-color: rgba(0, 0, 0, .90);
@@ -282,8 +283,8 @@ body {
   border-radius: 50%;
   mix-blend-mode: screen;
   background-image: radial-gradient(#99ffff, #99ffff 10%, rgba(153, 255, 255, 0) 56%);
-  -webkit-animation: fadein-frames 200ms infinite, scale-frames 2s infinite;
-          animation: fadein-frames 200ms infinite, scale-frames 2s infinite;
+  -webkit-animation: fadeIn-frames 200ms infinite, scale-frames 2s infinite;
+          animation: fadeIn-frames 200ms infinite, scale-frames 2s infinite;
 }
 @-webkit-keyframes fade-frames {
   0% {
