--- a/css/font.css
+++ b/css/font.css
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@300&display=swap');
+
+h1 {
+  font-family: 'Raleway', MS Sans Serif, Geneva, Sans-Serif;
+  font-weight: 800;
+}
+
+p {
+  font-family: 'Open Sans', Verdana, Geneva, Sans-Serif;
+  font-weight: 500;
+}
