--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,8 @@ button {
   color: #eee;
   font-size: 24px;
   font-size: clamp(16px, 4vw, 28px);
+  width: auto;
+  min-width: 100%;
 }
 
 form {
@@ -161,6 +163,8 @@ form {
   color: #eee;
   transition: all .5s;
   display: flex;
+  justify-content: stretch;
+  align-content: space-between;
   flex-wrap: wrap;
 	gap: 20px;
 }
@@ -179,7 +183,7 @@ button:active {
   padding-top: 0;
   padding-left: 6rem;
   padding-right: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0;
   max-width: 120vh;
 }
 
@@ -190,8 +194,6 @@ form label {
 form p {
   margin: 0;
 }
-
-
 
 /* .wrapper {
   margin: 4rem;
@@ -340,10 +342,22 @@ input[type=checkbox]:checked ~ label .line-3 {
   margin-bottom: 2rem;
 }
 
+/*Contact media queries */
+
 .contact-section {
   padding-top: 3rem;
-
   padding-bottom: 0rem;
+}
+
+button {
+  width: auto;
+  min-width: 100%;
+}
+
+form {
+  width: auto;
+  min-width: 100%;
+	
 }
 
 }
